--- a/bootstrap-2x1.html
+++ b/bootstrap-2x1.html
@@ -46,7 +46,7 @@
 
     <nav class="navbar navbar-expand navbar-dark bg-dark">
 
-        <a class="navbar-brand" href="#">SEO Site Spider Pro</a>
+        <a class="navbar-brand" href="#">Title</a>
 
     </nav>
 
